simple-python-web-server-in-k8s/k8s/app.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: simple-app
  labels:
    app: simple-app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app
        image: simple-python-app
        imagePullPolicy: Never
        ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  selector:
    app: simple-app
  ports:
    - port: 9080
      targetPort: 9080
  type: ClusterIP
